force-app/main/default/objects/Chef__c/fields/Active_Food__c.field-meta.xml
<CustomField>
    <fullName>Active_Food__c</fullName>
    <description>Count of active recipes contributed by the chef to the platform.</description>
    <label>Active Food</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>