force-app/main/default/objects/Chef__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <description>Capture a brief biography or background information of the chef to build credibility and connection with customers.</description>
    <label>Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>