force-app/main/default/objects/Chef__c/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <description>Store the chef profile image for identification and personalization.</description>
    <label>Profile Picture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>