force-app/main/default/objects/Chef__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>A numerical field to store the average rating given by customers, enabling quality and popularity assessment.</description>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>